--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,3 +21,76 @@
    margin: 0px;
    padding: 0px;
 }
+
+/* ------------------ START HEADER PART ----------------- */
+header{
+   background-image: linear-gradient(180deg, rgba(103, 171, 226, 0.463) 0%, rgba(6, 6, 6, 0.655) 50%), url(../images/banner/10.jpg);
+
+   background-position: center;
+   background-size: cover;
+   background-repeat: no-repeat;
+   
+   width: 100%;
+   height: 540px;
+   position: relative;
+}
+.content{
+   position: absolute;
+   top: 50%;
+   left: 50%;
+   transform: translate(-50%, -50%);
+   text-align: center;
+
+
+}
+.content h1{
+   color: white;
+   font-family: Poppins-Bold;
+   font-weight: 700;
+   font-size: 40px;
+   width: 97%;
+   display: inline-block;
+}
+.content p{
+   color: rgb(190, 187, 187);
+   font-weight: 300;
+   width: 80%;
+   display: inline-block;
+   font-family:  Roboto-Medium;
+   margin-top: 30px;
+   margin-bottom: 30px;
+}
+.content button{
+   display: block;
+   padding: 10px 30px;
+   margin: 0px auto;
+   background-color: #FF5959;
+   border: 1px solid #FF5959;
+   color: white;
+   font-size: 20px;
+   border-radius: 12px;
+   cursor: pointer;
+   transition: 0.4s;
+}
+.content button:hover{
+   background-color: #d44b4bf3;
+   
+}
+/* ------------------ END HEADER PART ----------------- */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
