Donate today part don

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,11 +15,18 @@
    font-family: Cookie-Regular;
 }
 
-
+body{
+   background-color: rgba(220, 220, 220, 0.525);
+}
 
 *{
    margin: 0px;
    padding: 0px;
+}
+.container{
+   width: 90%;
+   border: 1px solid red;
+   margin: 0px auto;
 }
 
 /* ------------------ START HEADER PART ----------------- */
@@ -60,7 +67,7 @@ header{
    margin-top: 30px;
    margin-bottom: 30px;
 }
-.content button{
+button{
    display: block;
    padding: 10px 30px;
    margin: 0px auto;
@@ -68,29 +75,90 @@ header{
    border: 1px solid #FF5959;
    color: white;
    font-size: 20px;
-   border-radius: 12px;
+   border-radius: 8px;
    cursor: pointer;
    transition: 0.4s;
 }
-.content button:hover{
+button:hover{
    background-color: #d44b4bf3;
    
 }
 /* ------------------ END HEADER PART ----------------- */
 
+/* ------------------ START DONATION AMOUNT PART ----------------- */
 
+#donate_today{
+   margin: 50px 0px;
+}
+.today{
+   width: 50%;
+   margin: 0px auto;
+}
+.today h2{
+   color: rgb(29, 27, 27);
+   font-family: Poppins-Bold;
+   text-align: center;
+   font-size: 30px;
+}
+.today p{
+   color: rgba(69, 67, 67, 0.866);
+   font-family:  Roboto-Medium;
+   text-align: center;
+   margin: 20px 0px 30px 0px;
+   font-size: 15px;
+}
+/* ................ */
+.donation{
+   width: 60%;
+   margin: 0px auto;
+   display: flex;
+   flex-direction: row;
+   justify-content: space-around;
+   align-items: center;
+   
+}
+.donation .amount{
+   width: 17%;
+   text-align: center;
+   padding: 22px 1px;
+   background-color: rgba(155, 236, 209, 0.074);
+   box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+   transition: .4s;
+   cursor: pointer;
+   border: 2px solid rgba(128, 128, 128, 0.19);
+}
+.donation .amount:hover{
+   background-color: #ef868632;
+   border: 2px solid #FF5959;
+   
+}
+.donation .amount h3{
+   font-family: Poppins-Bold;
+   font-size: 22px;
+   color: rgb(69, 68, 68);
+   transition: .4s;
+}
+.donation .amount:hover h3{
+   color: #FF5959;
+}
 
+.donation-field{
+   text-align: center;
+   margin: 25px 0px;
+}
 
+.donation-field input{
+    padding: 12px;
+    font-size: 14px;
+    text-align: center;
+    margin: 20px 0px;
+    border: none;
+    background-color: rgba(220, 220, 220, 0.144);
+    width: 60%;
+    box-sizing: border-box;
+    border-bottom: 2px solid rgba(102, 99, 99, 0.255);
+}
 
-
-
-
-
-
-
-
-
-
-
+/* ------------------ END DONATION AMOUNT PART ----------------- */
 
 
