--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -159,6 +159,43 @@ button:hover{
     border-bottom: 2px solid rgba(102, 99, 99, 0.255);
 }
 
+.donation-field input:{
+   border: none;
+}
+
 /* ------------------ END DONATION AMOUNT PART ----------------- */
+/* ------------------ START FOOTER PART ----------------- */
+footer{
+   width: 100%;
+   padding: 40px 0px;
+   background-color: rgb(0, 1, 5);
+}
+.mid-container{
+   width: 500px;
+   display: block;
+   margin: 0px auto;
+}
+.mid-container h3{
+   font-family: Cookie-Regular;
+   color: #FF5959;
+   font-size: 40px;
+   text-align: center;
+
+}
+.mid-container h3 span{
+   color: darkorange;
+   
+}
+.mid-container p{
+   color: white;
+   font-size: 13px;
+   word-spacing: 2px;
+   letter-spacing: 2px;
+   text-align: center;
+}
+
+/* ------------------ END FOOTER PART ----------------- */
+
+
 
 
