--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,7 +41,7 @@ p{
 
 /* ------------------ START HEADER PART ----------------- */
 header{
-   background-image: linear-gradient(180deg, rgba(103, 171, 226, 0.463) 0%, rgba(6, 6, 6, 0.655) 50%), url(../images/banner/10.jpg);
+   background-image: linear-gradient(180deg, rgba(103, 171, 226, 0.463) 0%, rgba(6, 6, 6, 0.655) 50%), url(../images/banner/1.jpg);
 
    background-position: center;
    background-size: cover;
@@ -234,7 +234,7 @@ button:hover{
 /* -- --------------- START DISASTER RECOVERY PART ----------- */
 #recovery{
    margin-bottom: 80px;
-   
+  
 }
 .disaster-recovery{
    display: flex;
@@ -242,20 +242,20 @@ button:hover{
    justify-content: space-between;
    align-items: center;
 }
-.disater{
+.disater-content{
    width: 40%;
 }
-.disater h2{
+.disater-content h2{
    text-align: center;
    font-size: 30px;
 }
-.disater hr{
+.disater-content hr{
    width: 20%;
    height: 1px;
    margin: 16px auto;
    background-color: rgb(11, 11, 80);
 }
-.disater p{
+.disater-content p{
    color: rgb(52, 46, 46);
    width: 80%;
    text-align: center;
@@ -276,6 +276,12 @@ button:hover{
 /* -- --------------- START DONATION MESSAGES PART ----------- */
 #messages{
    margin-bottom: 80px;
+   background-image: linear-gradient(180deg, rgba(237, 242, 246, 0.463) 0%, rgba(231, 216, 216, 0.974) 90%), url(../images/banner/10.jpg);
+   
+   background-position: center;
+   background-size: cover;
+   background-repeat: no-repeat;
+   background-attachment: fixed;
 }
 .disaster-message{
    display: flex;
@@ -286,21 +292,21 @@ button:hover{
 .message-vedio{
    width: 50%;
 }
-.message-box{
+.message-box-content{
    width: 50%;
 }
-.message-box h2{
+.message-box-content h2{
    text-align: center;
    font-size: 30px;
    
 }
-.message-box hr{
+.message-box-content hr{
    width: 20%;
    height: 1px;
    margin: 16px auto;
    background-color: rgb(11, 11, 80);
 }
-.message-box p{
+.message-box-content p{
    color: rgb(52, 46, 46);
    width: 80%;
    text-align: center;
@@ -313,6 +319,7 @@ button:hover{
 /* ------------------ START UPDATE PLAN PART ----------------- --> */
 #update{
    margin-bottom: 80px;
+  
 }
 .update-mail-box{
    background-color: #f3d5b0b9;
@@ -330,7 +337,7 @@ button:hover{
    display: inline-block;
 }
 .update-mail-box input{
-   padding: 9px 10px;
+   padding: 10px 10px;
    width: 300px;
    border-radius: 5px 0px 0px 5px;
    border: none;
@@ -344,7 +351,7 @@ button:hover{
    clear: both;
 }
 .subscribe{
-   padding: 7px 25px;
+   padding: 6px 25px;
    background-color: #FF5959;
    border: 1px solid #FF5959;
    color: white;
@@ -356,18 +363,6 @@ button:hover{
 
 
 /* ------------------ END UPDATE PLAN PART ----------------- --> */
-
-
-
-
-
-
-
-
-
-
-
-
 
 /* ------------------ START FOOTER PART ----------------- */
 footer{
